refactor: remove personal information and placeholders in the welcome and contact sections

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 			<section id="welcome">
 				<div class="welcome-content">
 					<h1><span id="typewriter" class="typewriter"></span></h1>
-					<div class="subtitle">Full-Stack Developer</div>
+					<div class="subtitle"></div>
 					<div class="contact-info">
-						<a href="mailto:zihad@tuta.io" class="email-text">zihad@tuta.io</a>
+						<a href="#" class="email-text"></a>
 					</div>
 					<div class="social-icons">
-						<a href="https://github.com/tasmirz" target="_blank" class="social-btn github">
+						<a href="#" target="_blank" class="social-btn github">
 							<span class="material-icons">code</span> <span class="extra-text">GitHub</span>
 						</a>
-						<a href="https://linkedin.com/in/tasmirz" target="_blank" class="social-btn linkedin">
+						<a href="#" target="_blank" class="social-btn linkedin">
 							<span class="material-icons">business</span> <span class="extra-text">LinkedIn</span>
 						</a>
 					</div>
@@ -59,7 +59,6 @@
 					<div class="about-content">
 						<h2>About Me</h2>
 						<div class="skills-section">
-							<h3>Skills</h3>
 						</div>
 					</div>
 					<div class="about-portrait">
@@ -77,15 +76,15 @@
 				<div class="contact-container">
 					<div class="contact-info">
 						<h3>Get In Touch</h3>
-						<p>I'm always interested in new opportunities and collaborations. Feel free to reach out!</p>
+						<p></p>
 						<div class="contact-details">
 							<div class="contact-item">
 								<span class="material-icons">email</span>
-								<span>zihad@tuta.io</span>
+								<span></span>
 							</div>
 							<div class="contact-item">
 								<span class="material-icons">location_on</span>
-								<span>Khulna, Bangladesh</span>
+								<span></span>
 							</div>
 						</div>
 					</div>
@@ -117,23 +116,23 @@
 		<footer>
 			<div class="footer-content">
 				<div class="footer-section">
-					<h4>Tasmir Hossain Zihad</h4>
-					<p>Full-Stack Developer passionate about creating innovative solutions.</p>
+					<h4></h4>
+					<p></p>
 				</div>
 				<div class="footer-section">
 					<h4>Connect</h4>
 					<div class="footer-social">
-						<a href="https://github.com/tasmirz" target="_blank" class="footer-social-link">
+						<a href="#" target="_blank" class="footer-social-link">
 							<span class="material-icons">code</span>
 						</a>
-						<a href="https://linkedin.com/in/tasmirz" target="_blank" class="footer-social-link">
+						<a href="#" target="_blank" class="footer-social-link">
 							<span class="material-icons">business</span>
 						</a>
 					</div>
 				</div>
 			</div>
 			<div class="footer-bottom">
-				<p>&copy; 2025 Tasmir Hossain Zihad. All rights reserved.</p>
+				<p></p>
 			</div>
 		</footer>
 		<script type="module" src="js/main.js"></script>
