Add WebGL implementation and shaders for interactive canvas experience
- Introduced WebGLLyf class for managing WebGL context and rendering.
- Implemented path-based scrolling with keyboard and touch controls.
- Added texture loading and quad setup for rendering.
- Created shaders for background and main rendering with effects.
- Implemented scroll locking and manual control features.
- Added responsive design for mobile controls.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		</header>
 		<main>
 			<section id="welcome">
+				<div id="welcome-background"></div>
 				<div class="welcome-content">
 					<h1><span id="typewriter" class="typewriter"></span></h1>
 					<div class="subtitle"></div>
@@ -69,6 +70,24 @@
 			<section id="projects">
 				<h2>My Projects</h2>
 				<div class="projects-container">
+				</div>
+			</section>
+			<section id="lyf">
+				<h2>Lyf</h2>
+				<div class="lyf-container">
+					<div class="lyf-canvas-container">
+						<!-- WebGL canvas will be added here -->
+					</div>
+					<!-- Mobile controls below the canvas -->
+					<div class="lyf-mobile-controls">
+						<div class="lyf-dpad">
+							<div class="lyf-dpad-button lyf-dpad-up" data-key="w">▲</div>
+							<div class="lyf-dpad-button lyf-dpad-down" data-key="s">▼</div>
+							<div class="lyf-dpad-button lyf-dpad-left" data-key="a">◀</div>
+							<div class="lyf-dpad-button lyf-dpad-right" data-key="d">▶</div>
+						</div>
+						<div class="lyf-action-button">●</div>
+					</div>
 				</div>
 			</section>
 			<section id="contact">
