--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 		<link rel="stylesheet" href="css/phone.css" />
 	</head>
 	<body>
+		<!-- Progress Tracker -->
+		<div class="scroll-progress-container">
+			<div class="scroll-progress-bar" id="scroll-progress-bar"></div>
+		</div>
+		
 		<header class="header-controls">
 			<nav>
 				<ul id="nav-menu">
@@ -123,7 +128,8 @@
 						
 						<div class="cv-section">
 							<h3>Download CV</h3>
-							<a href="assets/cv.pdf" download class="cv-download-btn">
+							<br>
+							<a href="assets/cv.pdf" download class="btn">
 								<span class="material-icons">download</span>
 								Download Resume
 							</a>
@@ -147,7 +153,7 @@
 							<label for="message">Message</label>
 							<textarea id="message" name="message" rows="5" required></textarea>
 						</div>
-						<button type="submit" class="submit-btn">
+						<button type="submit" class="submit-btn btn">
 							<span class="material-icons">send</span>
 							Send Message
 						</button>
