Add project and skills management pages with CRUD functionality
- Implemented Project Management page with features to add, edit, and delete projects.
- Created Skills Management page to organize skill categories and skills.
- Added backend logic for managing projects and skills using repositories.
- Enhanced UI with responsive design and user-friendly forms.
- Included JavaScript for form validation and dynamic UI interactions.
- Integrated logout functionality and session management.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 				<h2>About Me</h2>
 				<div class="about-container">
 					<div class="about-content">
+						<div class="about-text"></div>
 						<div class="skills-section">
 						</div>
 					</div>
